--- a/styles/4contactform.css
+++ b/styles/4contactform.css
@@ -1,3 +1,7 @@
+.contact {
+    height: 600px;
+}
+
 .name2 {
     font-size: 2.75rem;
     position: relative;
